fix: hide scrollbar in sidebar

--- a/extension/src/browser/ConnectionsDrawer/style.module.css
+++ b/extension/src/browser/ConnectionsDrawer/style.module.css
@@ -34,4 +34,9 @@
   padding: 40px 50px;
   overflow: auto;
   height: 100%;
+  scrollbar-width: none;
+}
+
+.drawerContent::-webkit-scrollbar {
+  display: none;
 }
